<resources>
    <string name="app_name">Teknobyen</string>
    <string name="projector">Prosjektor</string>
    <string name="washingmachine">Vaskemaskin</string>
    <string name="washinglist">Vaskeliste</string>
    <string name="fylla">Fylla</string>
    <string name="refill">Påfyll</string>
    <string name="status">Status</string>
    <string name="login">Logg på</string>
    <string name="title_activity_login">Logg på</string>

    <!-- Knapper -->
    <string name="accept">Bekreft</string>
    <string name="cancel">Avbryt</string>
    <string name="back">Tilbake</string>


    <!-- Strings related to login -->
    <string name="infoLogin">Dersom du skriver inn feil brukernavn og/eller passord vil
        ingenting skje når du forsøker å logge inn</string>
    <string name="loginString">Påloggings detaljer</string>
    <string name="username">Brukernavn:</string>
    <string name="password">Passord:</string>
    <string name="login_data">Påloggings data</string>

    <!-- Strings related to projector -->
    <string name="reserve">Reserver</string>
    <string name="room">Rom</string>
    <string name="ingenstatus">Utilgjengelig</string>
    <string name="neste_vaskedag">Neste Vaskedag</string>
    <string name="ingvenvaskedag">Ingen vaskedag på listen</string>
    <string name="romnr">Rom nummer:</string>
    <string name="navn">Navn:</string>
</resources>
